--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/MyShops.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/MyShops.cshtml
@@ -1,49 +1,34 @@
 ﻿@model IEnumerable<UWT.Web.Models.ShopViewModel>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Phone)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Address)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateCreated)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Phone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateCreated)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "EditShop", new { item.Id })
-        </td>
-    </tr>
+@{
+    ViewBag.Title = "MyShops";
+    ViewBag.MainTitle = "Moje trgovine";
+    ViewBag.Subtitle = "Pregled mojih trgovina";
 }
-
+@section buttons
+{
+    @Html.ActionLink("Stvorite novu trgovinu", "CreateShop", new {}, new {@class="btn btn-primary"})
+}
+<table class="table">
+    <thead>
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.Name)</th>
+            <th>@Html.DisplayNameFor(model => model.Email)</th>
+            <th>@Html.DisplayNameFor(model => model.Phone)</th>
+            <th>@Html.DisplayNameFor(model => model.Address)</th>
+            <th>@Html.DisplayNameFor(model => model.DateCreated)</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model) {
+            <tr>
+                <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                <td>@Html.DisplayFor(modelItem => item.Email)</td>
+                <td>@Html.DisplayFor(modelItem => item.Phone)</td>
+                <td>@Html.DisplayFor(modelItem => item.Address)</td>
+                <td>@Html.DisplayFor(modelItem => item.DateCreated)</td>
+                <td>@Html.ActionLink("Uredi trgovinu", "EditShop", new { item.Id }, new { @class = "btn btn-sm btn-default pull-right" })</td>
+            </tr>
+        }
+    </tbody>
 </table>
