--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/EditShop.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/EditShop.cshtml
@@ -1,4 +1,66 @@
 ﻿@using UWT.Web.Models
 @model ShopViewModel
 @{
+    ViewBag.Title = "title";
+    ViewBag.MainTitle = "Uredi trgovinu";
+    ViewBag.Subtitle = Model.Name;
+    var pageLayouts = (IEnumerable<SelectListItem>)ViewBag.PageLayouts;
+    var pageStyles = (IEnumerable<SelectListItem>)ViewBag.PageStyles;
+}
+@section buttons
+{
+    <a href="@Url.Action("MyShops")" class="btn btn-default">Natrag</a>
+    <a href="@Url.Action("Categories", "Merchant", new {shop = Model.Id})" class="btn btn-default">Kategorije proizvoda</a>
+    <a href="@Url.Action("Products", "Merchant", new { shop = Model.Id })" class="btn btn-default">Proizvodi</a>
+}
+@using (Html.BeginForm("EditShop", "Merchant", FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data" })) {
+    @Html.AntiForgeryToken()
+    @Html.HiddenFor(m => Model.Id)
+    
+    <div class="container">
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(m => m.Name, new { @class = "col-md-3 control-label" })
+            <div class="col-md-9">
+                @Html.EditorFor(m => m.Name, new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Email, new { @class = "col-md-3 control-label" })
+            <div class="col-md-9">
+                @Html.EditorFor(m => m.Email, new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Address, new { @class = "col-md-3 control-label" })
+            <div class="col-md-9">
+                @Html.EditorFor(m => m.Address, new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Phone, new { @class = "col-md-3 control-label" })
+            <div class="col-md-9">
+                @Html.EditorFor(m => m.Phone, new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.PageLayout, new { @class = "col-md-3 control-label" })
+            <div class="col-md-9">
+                @Html.DropDownListFor(m => m.PageLayout, pageLayouts, new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.PageStyle, new { @class = "col-md-3 control-label" })
+            <div class="col-md-9">
+                @Html.DropDownListFor(m => m.PageStyle, pageStyles, new { @class = "form-control" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-3 col-md-9 btn-group">
+                <input type="submit" class="btn btn-primary" value="Spremi" />
+                <a href="@Url.Action("MyShops")" class="btn btn-default">Odustani</a>
+            </div>
+        </div>
+    </div>
 }
