Product - several bugs fixed

--- a/UniverzalnaWebTrgovina/UWT.Web/Content/GalleryItem.css
+++ b/UniverzalnaWebTrgovina/UWT.Web/Content/GalleryItem.css
@@ -1,11 +1,4 @@
-﻿.galleryItem {
-    color: #797478;
-    font: 10px/1.5 Verdana, Helvetica, sans-serif;
-    float: left;
-    min-height: 280px;
-}
- 
-.galleryItem h3 {
+﻿.galleryItem h3 {
     text-transform: uppercase;
 }
  
@@ -23,6 +16,7 @@
     float: left;        
     width: 16%;
     margin:  2% 2% 20px 2%; 
+    min-height: 280px;
 }
 
 /* Media queries */
@@ -48,4 +42,15 @@ only screen and (max-device-width : 320px){
     .galleryItem img {width: 96%;}
     .galleryItem h3 {font-size: 18px;}
     .galleryItem p {font-size: 18px;}
+}
+
+/* sm */
+
+.galleryItem-sm {
+    min-height: 180px;
+    font-size: 9px;
+}
+ 
+.galleryItem-sm h3 {
+    font-size: 12px;
 }
