--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/Categories.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/Categories.cshtml
@@ -6,6 +6,7 @@
 }
 @section buttons {
     <a href="@Url.Action("EditShop", "Merchant", new {Id = ViewBag.ShopId})" class="btn btn-default">Natrag na trgovinu</a>
+    <a href="@Url.Action("Products", "Merchant", new { shop = ViewBag.ShopId })" class="btn btn-default">Proizvodi</a>
     <a href="@Url.Action("CreateCategory", "Merchant", new { shop = ViewBag.ShopId })" class="btn btn-primary">Izradi novu kategoriju</a>
 }
 <div class="container">
