--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/EditCategory.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/EditCategory.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "title";
     ViewBag.MainTitle = "Uredi kategoriju";
     ViewBag.Subtitle = "Kategorija: " + Model.Name + ", broj proizvoda: " + Model.Products;
+    ViewBag.ThumbnailSm = true;
 }
 @section buttons
 {
@@ -22,6 +23,11 @@
             </div>
         </div>
         <div class="form-group">
+            <div class="col-md-offset-3">
+                @Html.Partial("ImageEditor", new ImageEditorModel { DefaultImage = Model.Image.Replace("~", ""), FieldName = "image", Label = "Promijeni sliku:" }, ViewData)
+            </div>
+        </div>
+        <div class="form-group">
             <div class="col-md-offset-3 col-md-9 btn-group">
                 <input type="submit" class="btn btn-primary" value="Spremi promjene" />
                 <a href="@Url.Action("Categories", "Merchant", new {shop = ViewBag.ShopId})" class="btn btn-default">Odustani</a>
@@ -29,8 +35,13 @@
         </div>
     </div>
     <div class="col-md-6">
-        <div class="form-group">
-            @Html.Partial("ImageEditor", new ImageEditorModel { DefaultImage = Model.Image.Replace("~", ""), FieldName = "image", Label = "Slika:" }, ViewData)
+        <div class="row">
+            <h4>Proizvodi u kategoriji:</h4>
+            <div class="row">
+                @foreach (var item in (IEnumerable<ProductViewModel>)ViewBag.Products) {
+                    @Html.Partial("Thumbnail", item, ViewData)
+                }
+            </div>
         </div>
     </div>
 }
