--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/CreatePageStyle.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/CreatePageStyle.cshtml
@@ -67,17 +67,17 @@
         </div>
         <div class="col-md-2">
             <div class="form-group">
-                @Html.Partial("ImageEditor", new ImageEditorModel { DefaultImage = "", FieldName = "imgbackground", Label = "Pozadinska slika", Required = true })
+                @Html.Partial("ImageEditor", new ImageEditorModel { DefaultImage = "", FieldName = "imgbackground", Label = "Pozadinska slika" })
             </div>
         </div>
         <div class="col-md-2">
             <div class="form-group">
-                @Html.Partial("ImageEditor", new ImageEditorModel { DefaultImage = "", FieldName = "imgnav", Label = "Slika izbornika", Required = true })
+                @Html.Partial("ImageEditor", new ImageEditorModel { DefaultImage = "", FieldName = "imgnav", Label = "Slika izbornika" })
             </div>
         </div>
         <div class="col-md-2">
             <div class="form-group">
-                @Html.Partial("ImageEditor", new ImageEditorModel { DefaultImage = "", FieldName = "imgfooter", Label = "Slika podnožja", Required = true })
+                @Html.Partial("ImageEditor", new ImageEditorModel { DefaultImage = "", FieldName = "imgfooter", Label = "Slika podnožja" })
             </div>
         </div>
     </div>
