--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/CreateShop.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/CreateShop.cshtml
@@ -53,7 +53,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-3 col-md-9 btn-group">
-                <input type="submit" class="btn btn-primary" value="Dodaj predložak" />
+                <input type="submit" class="btn btn-primary" value="Pokreni trgovinu" />
                 <a href="@Url.Action("MyShops")" class="btn btn-default">Odustani</a>
             </div>
         </div>
