--- a/UniverzalnaWebTrgovina/UWT.Web/Content/uwtShops.css
+++ b/UniverzalnaWebTrgovina/UWT.Web/Content/uwtShops.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-color: #AA7939;
+    background-color: white;
 }
 
 .shopThumbnail {
@@ -10,12 +10,13 @@
     margin-bottom: 15px;
     height: 280px;
     padding: 10px;
-    background-color: #D4A66A;
+    /*background-color: #FFB9B3;*/
     float: left;        
 }
 
 .shopThumbnail:hover {
-    background-color: #FFDAAA;
+    /*background-color: #E2827A;*/
+    background-color: #EEEEEE;
 }
 
 .shopThumbnail div {
@@ -32,7 +33,7 @@
 
 .shopThumbnail a {
     text-decoration: none;
-    color: #553000;
+    color: #640C05;
 }
 
 .shopThumbnail img {
@@ -53,6 +54,6 @@ only screen and (max-device-width : 720px) {
     }
 }
 
-.demo-header {
-    background-color: #553000; 
+.sb-page-header {
+    margin-top: -48px;
 }
