--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Membership/Register.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Membership/Register.cshtml
@@ -12,8 +12,8 @@
 
             @Html.ValidationSummary("", new { @class = "text-danger" })
             <div class="form-group">
-                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
+                @Html.LabelFor(m => m.Email, new { @class = "col-md-4 control-label" })
+                <div class="col-md-8">
                     @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                 </div>
             </div>
@@ -24,20 +24,20 @@
                     </div>
                 </div>*@
             <div class="form-group">
-                @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
+                @Html.LabelFor(m => m.Name, new { @class = "col-md-4 control-label" })
+                <div class="col-md-8">
                     @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.Surname, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
+                @Html.LabelFor(m => m.Surname, new { @class = "col-md-4 control-label" })
+                <div class="col-md-8">
                     @Html.TextBoxFor(m => m.Surname, new { @class = "form-control" })
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.PhoneNumber, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
+                @Html.LabelFor(m => m.PhoneNumber, new { @class = "col-md-4 control-label" })
+                <div class="col-md-8">
                     @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control" })
                 </div>
             </div>
@@ -48,20 +48,25 @@
                     </div>
                 </div>*@
             <div class="form-group">
-                @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
+                @Html.LabelFor(m => m.Password, new { @class = "col-md-4 control-label" })
+                <div class="col-md-8">
                     @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
+                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-4 control-label" })
+                <div class="col-md-8">
                     @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.Label("Registriraj me kao trgovca", new { @class = "col-md-4 control-label" })
+                <div class="col-md-8">
+                    @Html.CheckBox("Merchant", (bool)ViewBag.Merchant, new {})
                 </div>
             </div>
         </div>
         <div class="col-md-5">
-
             <div class="form-group">
                 @Html.Label("Profilna slika", new { @class = "col-md-2 control-label" })
                 <div class="col-md-10">
@@ -71,7 +76,7 @@
             </div>
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" class="btn btn-default" value="Register" />
+                    <input type="submit" class="btn btn-primary" value="Završi registraciju" />
                 </div>
             </div>
         </div>
