--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/EditShop.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/EditShop.cshtml
@@ -58,7 +58,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-3 col-md-9 btn-group">
-                <input type="submit" class="btn btn-primary" value="Spremi" />
+                <input type="submit" class="btn btn-primary" value="Spremi promjene" />
                 <a href="@Url.Action("MyShops")" class="btn btn-default">Odustani</a>
             </div>
         </div>
